--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Eujene Yum"
-  avatar           : "profile_small.jpeg"
+  avatar           : "profile_small_2.jpeg"
   bio              : "M.S. Candidate in CS x Policy at the University of Chicago"
   location         : "Chicago, IL"
   email            : "eujeneyum@gmail.com"
