--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ author:
   name             : "Eujene Yum"
   avatar           : "profile_small.jpeg"
   bio              : "M.S. Candidate in CS x Policy at the University of Chicago"
+  resume           : "https://github.com/eujeneyumm/eujeneyumm.github.io/blob/master/_data/Technical_Resume_Eujene_Yum.pdf"
   location         : "Chicago, IL"
   email            : "eujeneyum@gmail.com"
   github           : "eujeneyumm"
   linkedin         : "eujeneyum"
-  twitter          : "eujene-yum"
 
 
 # Reading Files
