--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Eujene Yum"
   avatar           : "profile_small.jpeg"
-  bio              : "M.S. Candidate in CS x Policy at the University of Chicago [Resume](https://github.com/eujeneyumm/eujeneyumm.github.io/blob/master/_data/Technical_Resume_Eujene_Yum.pdf)"
+  bio              : "M.S. Candidate in CS x Policy at the University of Chicago"
   location         : "Chicago, IL"
   email            : "eujeneyum@gmail.com"
   github           : "eujeneyumm"
